--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
+black==22.12.0
 certifi==2022.12.7
 charset-normalizer==3.0.1
+click==8.1.3
+colorama==0.4.6
 idna==3.4
+mypy-extensions==0.4.3
+pathspec==0.11.0
+platformdirs==2.6.2
 python-dateutil==2.8.2
 python-dotenv==0.21.1
 requests==2.28.2
 six==1.16.0
+tomli==2.0.1
 urllib3==1.26.14
